# OpenCV-CPP

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  script.sh  user_guide.md
include/: stdafx.h
source/: main.cpp
src/: main.cpp
